<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CowPosition">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/gesund"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/info_win_healthy"
        app:layout_constraintStart_toStartOf="@+id/info_win_healthy"
        app:layout_constraintTop_toBottomOf="@+id/info_win_healthy" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarCowMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="auto"
        android:theme="@android:style/Theme.Material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/navact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="NavAct"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:hapticFeedbackEnabled="true"
                android:scaleType="centerCrop"
                android:tint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.13"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24px" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:autoSizeTextType="uniform"
                android:paddingLeft="0dp"
                android:paddingTop="18dp"
                android:text="@string/kuh_position"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_pos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarCowMap">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarCowMap">


            <ImageView
                android:id="@+id/preHeatPos"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toStartOf="@+id/inHeat_pos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_vorbrunst_app" />

            <ImageView
                android:id="@+id/inHeat_pos"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:adjustViewBounds="false"
                app:layout_constraintEnd_toStartOf="@+id/postHeat_pos"
                app:layout_constraintStart_toEndOf="@+id/preHeatPos"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_cow_heat" />

            <ImageView
                android:id="@+id/postHeat_pos"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toStartOf="@+id/healty_pos"
                app:layout_constraintStart_toEndOf="@+id/inHeat_pos"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_nachbrunst_app" />

            <ImageView
                android:id="@+id/healty_pos"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toStartOf="@+id/sick_pos"
                app:layout_constraintStart_toEndOf="@+id/postHeat_pos"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_healthy" />

            <ImageView
                android:id="@+id/sick_pos"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/healty_pos"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_sick_app" />

            <TextView
                android:id="@+id/preHeatPos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_text_view"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/inHeat_pos"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inHeatPos_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_text_view"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/postHeat_pos"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/postHeatPos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_text_view"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/healty_pos"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sickPos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:background="@drawable/round_text_view"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/healthyPos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_text_view"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/sick_pos"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/vorbrunst"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/preHeatPos"
                app:layout_constraintStart_toStartOf="@+id/preHeatPos"
                app:layout_constraintTop_toBottomOf="@+id/preHeatPos" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/brunst"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/inHeat_pos"
                app:layout_constraintStart_toStartOf="@+id/inHeat_pos"
                app:layout_constraintTop_toBottomOf="@+id/inHeat_pos" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:text="@string/nachbrunst"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/postHeat_pos"
                app:layout_constraintStart_toStartOf="@+id/postHeat_pos"
                app:layout_constraintTop_toBottomOf="@+id/postHeat_pos" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/gesund"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/healty_pos"
                app:layout_constraintStart_toStartOf="@+id/healty_pos"
                app:layout_constraintTop_toBottomOf="@+id/healty_pos" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/krank"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/sick_pos"
                app:layout_constraintStart_toStartOf="@+id/sick_pos"
                app:layout_constraintTop_toBottomOf="@+id/sick_pos" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/canvasLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_pos">

        <de.innocow.innocow_v001.utilities.views.CowPositionCanvasView
            android:id="@+id/positionView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>